// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XIRR with correct config should create expected execution definition 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "timeline.aag81lMifn6q",
          "type": "displayForm",
        },
        "localIdentifier": "a_timeline.aag81lMifn6q",
      },
    },
  ],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aadpHDMBecIy",
                },
              },
            },
            "localIdentifier": "m_aadpHDMBecIy",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "timeline.aag81lMifn6q",
              "type": "displayForm",
            },
            "localIdentifier": "a_timeline.aag81lMifn6q",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
        "a_timeline.aag81lMifn6q",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aadpHDMBecIy",
            },
          },
        },
        "localIdentifier": "m_aadpHDMBecIy",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "reference-workspace",
}
`;

exports[`XIRR with correct config should create expected props for core chart 1`] = `
Object {
  "exportTitle": "Xirr",
  "workspace": "reference-workspace",
}
`;

exports[`XIRR with drilling on single measure should create expected execution definition 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "timeline.aag81lMifn6q",
          "type": "displayForm",
        },
        "localIdentifier": "a_timeline.aag81lMifn6q",
      },
    },
  ],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aadpHDMBecIy",
                },
              },
            },
            "localIdentifier": "m_aadpHDMBecIy",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "timeline.aag81lMifn6q",
              "type": "displayForm",
            },
            "localIdentifier": "a_timeline.aag81lMifn6q",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
        "a_timeline.aag81lMifn6q",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aadpHDMBecIy",
            },
          },
        },
        "localIdentifier": "m_aadpHDMBecIy",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "reference-workspace",
}
`;

exports[`XIRR with drilling on single measure should create expected props for core chart 1`] = `
Object {
  "drillableItems": Array [
    [Function],
  ],
  "exportTitle": "Xirr",
  "workspace": "reference-workspace",
}
`;

exports[`XIRR with drilling on single measure with underlining disabled should create expected execution definition 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "timeline.aag81lMifn6q",
          "type": "displayForm",
        },
        "localIdentifier": "a_timeline.aag81lMifn6q",
      },
    },
  ],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aadpHDMBecIy",
                },
              },
            },
            "localIdentifier": "m_aadpHDMBecIy",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "timeline.aag81lMifn6q",
              "type": "displayForm",
            },
            "localIdentifier": "a_timeline.aag81lMifn6q",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
        "a_timeline.aag81lMifn6q",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aadpHDMBecIy",
            },
          },
        },
        "localIdentifier": "m_aadpHDMBecIy",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "reference-workspace",
}
`;

exports[`XIRR with drilling on single measure with underlining disabled should create expected props for core chart 1`] = `
Object {
  "config": Object {
    "disableDrillUnderline": true,
  },
  "drillableItems": Array [
    [Function],
  ],
  "exportTitle": "Xirr",
  "workspace": "reference-workspace",
}
`;

exports[`XIRR with only measure should create expected execution definition 1`] = `
Object {
  "attributes": Array [],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aadpHDMBecIy",
                },
              },
            },
            "localIdentifier": "m_aadpHDMBecIy",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aadpHDMBecIy",
            },
          },
        },
        "localIdentifier": "m_aadpHDMBecIy",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "reference-workspace",
}
`;

exports[`XIRR with only measure should create expected props for core chart 1`] = `
Object {
  "exportTitle": "Xirr",
  "workspace": "reference-workspace",
}
`;

exports[`XIRR with semantically wrong measure should create expected execution definition 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "timeline.aag81lMifn6q",
          "type": "displayForm",
        },
        "localIdentifier": "a_timeline.aag81lMifn6q",
      },
    },
  ],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "abYgDBRagANw",
                },
              },
            },
            "localIdentifier": "m_abYgDBRagANw",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "timeline.aag81lMifn6q",
              "type": "displayForm",
            },
            "localIdentifier": "a_timeline.aag81lMifn6q",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
        "a_timeline.aag81lMifn6q",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "abYgDBRagANw",
            },
          },
        },
        "localIdentifier": "m_abYgDBRagANw",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "reference-workspace",
}
`;

exports[`XIRR with semantically wrong measure should create expected props for core chart 1`] = `
Object {
  "exportTitle": "Xirr",
  "workspace": "reference-workspace",
}
`;
